--- a/components/Buttons/examples/resources/ButtonsContentEdgeInsets.storyboard
+++ b/components/Buttons/examples/resources/ButtonsContentEdgeInsets.storyboard
@@ -22,7 +22,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bvE-5P-0PG" customClass="MDCFlatButton">
-                                <rect key="frame" x="142" y="83" width="91" height="34"/>
+                                <rect key="frame" x="127.5" y="83" width="120" height="34"/>
                                 <color key="tintColor" red="0.19254023644059035" green="0.53181806153905575" blue="0.91669365284974091" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <inset key="contentEdgeInsets" minX="0.0" minY="0.0" maxX="16" maxY="16"/>
                                 <state key="normal" title="Flat Button">
@@ -39,7 +39,9 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YCS-6P-hwz" customClass="MDCFloatingButton">
                                 <rect key="frame" x="174" y="167" width="26" height="34"/>
                                 <inset key="contentEdgeInsets" minX="16" minY="16" maxX="0.0" maxY="0.0"/>
-                                <state key="normal" title="+"/>
+                                <state key="normal" title="+">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
                             </button>
                             <view contentMode="scaleToFill" verticalHuggingPriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="ggl-rV-inE">
                                 <rect key="frame" x="104" y="20" width="167" height="47"/>
@@ -72,6 +74,7 @@
                         <constraints>
                             <constraint firstItem="YCS-6P-hwz" firstAttribute="centerX" secondItem="dDe-BW-Avd" secondAttribute="centerX" id="Aeg-aQ-A5S"/>
                             <constraint firstItem="ggl-rV-inE" firstAttribute="centerX" secondItem="dDe-BW-Avd" secondAttribute="centerX" id="BOB-as-3UC"/>
+                            <constraint firstItem="bvE-5P-0PG" firstAttribute="width" secondItem="Dqo-nu-adB" secondAttribute="width" id="P90-m1-NoY"/>
                             <constraint firstItem="ggl-rV-inE" firstAttribute="top" secondItem="pu1-Ea-nBj" secondAttribute="bottom" id="Wvf-e8-PGo"/>
                             <constraint firstItem="bvE-5P-0PG" firstAttribute="top" secondItem="ggl-rV-inE" secondAttribute="bottom" constant="16" id="jcM-hg-XjL"/>
                             <constraint firstItem="bvE-5P-0PG" firstAttribute="centerX" secondItem="dDe-BW-Avd" secondAttribute="centerX" id="k35-WX-pnN"/>
