--- a/components/Themes/examples/resources/ThemerCustomSchemePicker.storyboard
+++ b/components/Themes/examples/resources/ThemerCustomSchemePicker.storyboard
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="lFC-GV-0n9">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13178.6" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="lFC-GV-0n9">
     <device id="ipad12_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13156.2"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -23,13 +24,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="wRO-Oc-Kdf" userLabel="primaryView">
-                                <rect key="frame" x="368" y="40" width="288" height="112"/>
+                                <rect key="frame" x="402" y="40" width="220.5" height="44.5"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Primary Color" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="S6a-tS-3C0" userLabel="primaryInput" customClass="MDCTextField">
-                                        <rect key="frame" x="0.0" y="24" width="160" height="64"/>
+                                        <rect key="frame" x="0.0" y="7.5" width="160" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" priority="750" constant="160" id="C1a-8M-aWi"/>
-                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="64" id="VQR-Rf-sMK"/>
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="xCD-8B-E86"/>
                                         </constraints>
                                         <nil key="textColor"/>
@@ -37,49 +37,37 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BfC-Oh-khz" userLabel="primaryPreView">
-                                        <rect key="frame" x="168" y="0.0" width="112" height="112"/>
+                                        <rect key="frame" x="168" y="0.0" width="44.5" height="44.5"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="BfC-Oh-khz" secondAttribute="height" id="hmw-y3-OF2"/>
-                                            <constraint firstAttribute="width" constant="112" id="mWW-Je-ocF"/>
                                         </constraints>
-                                        <variation key="default">
-                                            <mask key="constraints">
-                                                <exclude reference="mWW-Je-ocF"/>
-                                            </mask>
-                                        </variation>
-                                        <variation key="widthClass=regular">
-                                            <mask key="constraints">
-                                                <include reference="mWW-Je-ocF"/>
-                                            </mask>
-                                        </variation>
                                     </view>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="BfC-Oh-khz" secondAttribute="trailing" constant="8" id="4rU-F8-fcd"/>
                                     <constraint firstItem="BfC-Oh-khz" firstAttribute="top" secondItem="wRO-Oc-Kdf" secondAttribute="top" id="AAB-48-W6x"/>
+                                    <constraint firstItem="S6a-tS-3C0" firstAttribute="height" secondItem="BfC-Oh-khz" secondAttribute="height" multiplier="1:1.5" id="OL4-p2-V89"/>
                                     <constraint firstAttribute="bottom" secondItem="BfC-Oh-khz" secondAttribute="bottom" id="PB4-eY-h8x"/>
                                     <constraint firstItem="S6a-tS-3C0" firstAttribute="top" relation="greaterThanOrEqual" secondItem="wRO-Oc-Kdf" secondAttribute="top" id="PjB-ur-zby"/>
                                     <constraint firstItem="BfC-Oh-khz" firstAttribute="centerY" secondItem="S6a-tS-3C0" secondAttribute="centerY" id="SF6-MM-bae"/>
                                     <constraint firstItem="BfC-Oh-khz" firstAttribute="leading" secondItem="S6a-tS-3C0" secondAttribute="trailing" constant="8" id="WCg-AW-w0P"/>
                                     <constraint firstItem="S6a-tS-3C0" firstAttribute="leading" secondItem="wRO-Oc-Kdf" secondAttribute="leading" id="hnL-rk-Cc7"/>
+                                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="S6a-tS-3C0" secondAttribute="bottom" id="wh2-Uz-E0x"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="zTt-dd-d7a" userLabel="secondaryView">
-                                <rect key="frame" x="368" y="160" width="288" height="112"/>
+                                <rect key="frame" x="402" y="92.5" width="220.5" height="44.5"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Secondary Color" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yCc-P4-0aA" userLabel="secondaryInput" customClass="MDCTextField">
-                                        <rect key="frame" x="0.0" y="24" width="160" height="64"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="64" id="PKe-6d-Ig8"/>
-                                        </constraints>
+                                        <rect key="frame" x="0.0" y="7.5" width="160" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dxR-So-exr" userLabel="secondaryPreView">
-                                        <rect key="frame" x="168" y="0.0" width="112" height="112"/>
+                                        <rect key="frame" x="168" y="0.0" width="44.5" height="44.5"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="dxR-So-exr" secondAttribute="height" id="Afd-5O-18D"/>
@@ -92,13 +80,14 @@
                                     <constraint firstItem="yCc-P4-0aA" firstAttribute="leading" secondItem="zTt-dd-d7a" secondAttribute="leading" id="UQc-xq-Lde"/>
                                     <constraint firstItem="dxR-So-exr" firstAttribute="leading" secondItem="yCc-P4-0aA" secondAttribute="trailing" constant="8" id="hMC-ym-mBz"/>
                                     <constraint firstAttribute="bottom" secondItem="dxR-So-exr" secondAttribute="bottom" id="hvY-cd-HRT"/>
+                                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="yCc-P4-0aA" secondAttribute="bottom" id="kyn-Jy-Jeu"/>
                                     <constraint firstAttribute="trailing" secondItem="dxR-So-exr" secondAttribute="trailing" constant="8" id="oYl-t8-re5"/>
                                     <constraint firstItem="yCc-P4-0aA" firstAttribute="top" relation="greaterThanOrEqual" secondItem="zTt-dd-d7a" secondAttribute="top" id="xiP-Js-sjJ"/>
                                     <constraint firstItem="dxR-So-exr" firstAttribute="top" secondItem="zTt-dd-d7a" secondAttribute="top" id="yU9-Rj-aVi"/>
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nlq-9v-t4E" customClass="MDCRaisedButton">
-                                <rect key="frame" x="485" y="288" width="54" height="30"/>
+                                <rect key="frame" x="485" y="153" width="54" height="30"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <state key="normal" title="Preview"/>
